# aedos

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
apps/dashboard/: Dockerfile  package-lock.json  package.json
apps/dashboard/src/: app.html
apps/dashboard/src/lib/server/: oracleProxy.ts
apps/dashboard/src/routes/: +page.svelte
apps/dashboard/src/routes/admin/: +page.svelte
apps/dashboard/src/routes/admin/api/[...path]/: +server.ts
apps/dashboard/src/routes/login/: +page.svelte
apps/dashboard/src/routes/v1/[...path]/: +server.ts
crates/oracle/: Cargo.toml  Dockerfile
crates/oracle/src/: admin.rs  api.rs  config.rs  db.rs  images.rs  labels.rs  main.rs  metrics.rs  nostr.rs  queue.rs  types.rs  websocket.rs
docs/: INTEGRATION_AGENT_PROMPT.md  OPERATIONS.md
migrations/: 001_init.sql
monitoring/: prometheus-alerts.yml
scripts/: backup-postgres.sh  restore-postgres.sh  retention.sql
workers/python/: Dockerfile  hashing.py  moderation.py  pyproject.toml  worker.py
workers/python/providers/: __init__.py  deterministic.py  factory.py  openai_moderation.py
workers/python/tests/: test_hashing.py  test_moderation.py  test_openai_moderation.py  test_worker.py
