[project]
name = "nostr-label-oracle-worker"
version = "0.1.0"
description = "Python moderation workers for the Nostr label oracle"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0",
  "httpx>=0.28.0",
  "imagehash>=4.3.1",
  "pillow>=11.0.0",
  "redis>=5.2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
